--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         8,
         "r1bk3r/p2pBpNp/n4n2/1p1NP2P/6P1/3P4/P1P1K3/q5b1",
       );
-      cb.init();
+      await cb.init();
     </script>
   </body>
 </html>
